--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -6,6 +6,7 @@
   <title>Random Encounter Club</title>
   <link href="css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body ng-app="scaffoldApp">
   <!-- <h1>Random Encounter Club</h1> -->
