--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles/style.css">
 </head>
-<body ng-app="scaffoldApp">
+<body ng-app="randomEncounter">
   <!-- <h1>Random Encounter Club</h1> -->
   <nav class="navbar navbar-default">
     <div class="container-fluid">
@@ -31,11 +31,13 @@
     </div>
   </nav>
   <div ui-view></div>
+
   <script src="assets/angular/angular.min.js"></script>
+  <script src="assets/angular-ui-router/release/angular-ui-router.min.js"></script>
+  <script src="assets/angular-cookies/angular-cookies.min.js"></script>
+  <script src="assets/angular-jwt/dist/angular-jwt.min.js"></script>
   <script src="assets/jquery/dist/jquery.min.js"></script>
   <script src="assets/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="assets/angular-ui-router/release/angular-ui-router.min.js"></script>
-  <!-- <script src="views/home/home.js"></script> -->
   <script src="bundle.js"></script>
 </body>
 </html>
