--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -25,12 +25,13 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li><a ui-sref="home">Home</a></li>
+          <li><a ui-sref="userpage">Find</a></li>
           <!-- <ul class="nav navbar-nav" ng-if="!loggedIn"> -->
             <li><a ui-sref="login">Login</a></li>
             <li><a ui-sref="register">Register</a></li>
           <!-- </ul> -->
           <li><a ui-sref="map">Map</a></li>
-          <li><a ng-click="logout">Logout</a></li>
+          <li><a ng-click="logout()">Logout</a></li>
         </ul>
       </div>
     </div>
