--- a/source/views/userpage/userpage.html
+++ b/source/views/userpage/userpage.html
@@ -1,9 +1,15 @@
 <h1>Welcome Home</h1>
 <div ng-if="loggedIn">
-	<button ng-click="findFriendIn(userInfo.location, userInfo.username)">Find a new friend in {{userInfo.location}}</button>
+	<button ng-if="!newPal" ng-click="findFriendIn(userInfo.location, userInfo.username)">Find a new friend in {{userInfo.location}}</button>
 	<input type="text" ng-model="interest" placeholder="interest">
 	<button ng-click="submitInterest(interest)">Add a new interest</button>
 	<div ng-repeat="interest in userInfo.interests">
-		{{interest}}
+		<button ng-click="findByCityAndInterest(userInfo.location, interest,  userInfo.username)">
+			Find a fan of {{interest}}
+		</button>
+	</div>
+	<div ng-if="newPal">
+		Your new pal is {{newPal.username}}!
+		<button ng-click="findFriendIn(userInfo.location, userInfo.username)">Find a new pal</button>
 	</div>
 </div>
