--- a/source/views/userpage/userpage.html
+++ b/source/views/userpage/userpage.html
@@ -1,5 +1,5 @@
 <h1>Welcome Home</h1>
-<div ng-if="loggedIn">
+<div ng-if="authentication.isAuthed">
 	<button ng-if="!newPal" ng-click="findFriendIn(userInfo.location, userInfo.username)">Find a new friend in {{userInfo.location}}</button>
 	<input type="text" ng-model="interestInput" placeholder="interest">
 	<button ng-click="submitInterest(interestInput, userInfo._id)">Add a new interest</button>
