--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -6,12 +6,13 @@
   <title>Random Encounter Club</title>
   <link href="css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://bootswatch.com/sandstone/bootstrap.min.css">
   <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="https://js.arcgis.com/3.15/esri/css/esri.css">
 </head>
 <body ng-app="randomEncounter" ng-controller="MasterController">
   <!-- <h1>Random Encounter Club</h1> -->
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -26,12 +27,17 @@
         <ul class="nav navbar-nav">
           <li><a ui-sref="home">Home</a></li>
           <li><a ui-sref="userpage">Find</a></li>
-          <!-- <ul class="nav navbar-nav" ng-if="!loggedIn"> -->
+          <ul class="nav navbar-nav" ng-if="!authentication.isAuthed">
             <li><a ui-sref="login">Login</a></li>
             <li><a ui-sref="register">Register</a></li>
-          <!-- </ul> -->
+          </ul>
           <li><a ui-sref="map">Map</a></li>
-          <li><a ng-click="logout()">Logout</a></li>
+          <li><a ng-if="authentication.isAuthed" ng-click="logout()">Logout</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <ul class="nav navbar-nav">
+            <li><a ui-sref="userpage">{{authentication.userInfo.username}}</a></li>
+          </ul>
         </ul>
       </div>
     </div>
