--- a/source/views/userpage/userpage.html
+++ b/source/views/userpage/userpage.html
@@ -1,21 +1,22 @@
 <h1>Welcome Home</h1>
 <div ng-if="authentication.isAuthed">
-	<button ng-if="!newPal" ng-click="findFriendIn(userInfo.location, userInfo.username)">Find a new friend in {{userInfo.location}}</button>
+	<button ng-if="!newPal" ng-click="findFriendIn(authentication.userInfo.location, authentication.userInfo.username)">Find a new friend in {{authentication.userInfo.location}}</button>
+
 	<input type="text" ng-model="interestInput" placeholder="interest">
 	<button ng-click="submitInterest(interestInput, authentication.userInfo._id)">Add a new interest</button>
-	<div ng-repeat="interest in userInfo.interests track by $index">
-		<button ng-click="findByCityAndInterest(userInfo.location, interestInput,  userInfo.username)">
+	<div ng-repeat="interest in authentication.userInfo.interests track by $index">
+		<button ng-click="findByCityAndInterest(authentication.userInfo.location, interest,  authentication.userInfo.username)">
 			Find a fan of {{interest}}
 		</button>
 	</div>
-	<div ng-if="userInfo.alerts.length">
+	<div ng-if="authentication.userInfo.alerts.length">
 		You got alerted by:
-		<div  ng-repeat="alert in userInfo.alerts track by $index">
+		<div  ng-repeat="alert in authentication.userInfo.alerts track by $index">
 			{{alert}}
 		</div>
 	</div>
 	<div ng-if="newPal">
 		Your new pal is {{newPal.username}}!
-		<button ng-click="findFriendIn(userInfo.location, userInfo.username)">Find a new pal</button>
+		<button ng-click="findFriendIn(authentication.userInfo.location, authentication.userInfo.username)">Find a new pal</button>
 	</div>
 </div>
