--- a/source/views/userpage/userpage.html
+++ b/source/views/userpage/userpage.html
@@ -11,7 +11,7 @@
 		<button ng-click="removeInterest(interest._id, authentication.userInfo._id)">X</button>
 	</div>
 
-	<div ng-if="authentication.userInfo.alerts.length">
+	<!-- <div ng-if="authentication.userInfo.alerts.length">
 		You got alerted by:
 		<div  ng-repeat="alert in authentication.userInfo.alerts track by $index">
 			{{alert}}
@@ -20,26 +20,5 @@
 	<div ng-if="newPal">
 		Your new pal is {{newPal.username}}!
 		<button ng-click="findFriendIn(authentication.userInfo.location, authentication.userInfo.username)">Find a new pal</button>
-	</div>
+	</div> -->
 </div>
-<!-- <h1>Welcome Home</h1>
-<div ng-if="authentication.isAuthed">
-	<button ng-if="!newPal" ng-click="findFriendIn(authentication.userInfo.location, authentication.userInfo.username)">Find a new friend in {{authentication.userInfo.location}}</button>
-	<input type="text" ng-model="interestInput" placeholder="interest">
-	<button ng-click="submitInterest(interestInput, authentication.userInfo._id)">Add a new interest</button>
-	<div ng-repeat="interest in authentication.userInfo.interests track by $index">
-		<button ng-click="findByCityAndInterest(authentication.userInfo.location, interest,  authentication.userInfo.username)">
-			Find a fan of {{interest.name}}
-		</button>
-	</div>
-	<div ng-if="authentication.userInfo.alerts.length">
-		You got alerted by:
-		<div  ng-repeat="alert in authentication.userInfo.alerts track by $index">
-			{{alert}}
-		</div>
-	</div>
-	<div ng-if="newPal">
-		Your new pal is {{newPal.username}}!
-		<button ng-click="findFriendIn(authentication.userInfo.location, authentication.userInfo.username)">Find a new pal</button>
-	</div>
-</div> -->
