Sweetalert, fuck yeah

--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -4,11 +4,14 @@
   <base href="/">
   <meta charset="UTF-8">
   <title>Random Encounter Club</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link href="css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://bootswatch.com/sandstone/bootstrap.min.css">
   <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="https://js.arcgis.com/3.15/esri/css/esri.css">
+  <script src="assets/sweetalert/dist/sweetalert.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="assets/sweetalert/dist/sweetalert.css">
 </head>
 <body ng-app="randomEncounter" ng-controller="MasterController">
   <!-- <h1>Random Encounter Club</h1> -->
@@ -45,6 +48,8 @@
   <div ui-view></div>
   <script src="https://js.arcgis.com/3.15/"></script>
   <script src="assets/angular/angular.min.js"></script>
+  <script src="assets/ngSweetAlert/SweetAlert.min.js"></script>
+  <script src="assets/ngSweetAlert/SweetAlert.min.js"></script>
   <script src="assets/angular-ui-router/release/angular-ui-router.min.js"></script>
   <script src="assets/angular-cookies/angular-cookies.min.js"></script>
   <script src="assets/angular-jwt/dist/angular-jwt.min.js"></script>
