--- a/source/views/userpage/userpage.html
+++ b/source/views/userpage/userpage.html
@@ -8,17 +8,19 @@
 		<button ng-click="findByCityAndInterest(authentication.userInfo.location, interest,  authentication.userInfo.username)">
 			Find a fan of {{interest.name}}
 		</button>
-		<button ng-click="removeInterest(interest._id)">X</button>
+		<button ng-click="removeInterest(interest._id)">
+			<i class="fa fa-trash"></i>
+		</button>
 	</div>
 
 	<!-- <div ng-if="authentication.userInfo.alerts.length">
-		You got alerted by:
-		<div  ng-repeat="alert in authentication.userInfo.alerts track by $index">
-			{{alert}}
-		</div>
-	</div>
-	<div ng-if="newPal">
-		Your new pal is {{newPal.username}}!
-		<button ng-click="findFriendIn(authentication.userInfo.location, authentication.userInfo.username)">Find a new pal</button>
-	</div> -->
+	You got alerted by:
+	<div  ng-repeat="alert in authentication.userInfo.alerts track by $index">
+	{{alert}}
+</div>
+</div>
+<div ng-if="newPal">
+Your new pal is {{newPal.username}}!
+<button ng-click="findFriendIn(authentication.userInfo.location, authentication.userInfo.username)">Find a new pal</button>
+</div> -->
 </div>
