--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -55,6 +55,7 @@
   <script src="assets/angular-jwt/dist/angular-jwt.min.js"></script>
   <script src="assets/jquery/dist/jquery.min.js"></script>
   <script src="assets/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="assets/angularjs-geolocation/dist/angularjs-geolocation.min.js"></script>
   <script src="bundle.js"></script>
 </body>
 </html>
